// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post card should render correctly post with featured image 1`] = `
<Item
  className="post-item"
>
  <Link
    className="post-link"
    replace={false}
    to="/category/some-slug/32/post/mock-slug/1"
  >
    <div>
      <CategoryLabel
        key="43"
        link={null}
        name="Some category"
      />
      <CategoryLabel
        key="54"
        link={null}
        name="Some category"
      />
      <CategoryLabel
        key="23"
        link={null}
        name="Some category"
      />
    </div>
    <ItemHeader
      as="h1"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Mock title",
        }
      }
    />
    <ItemContent>
      <div
        className="image"
        style={
          Object {
            "backgroundImage": "url(someMockImageUrl)",
          }
        }
      />
      <ItemDescription
        dangerouslySetInnerHTML={
          Object {
            "__html": "Some mock exceprt to be rendered",
          }
        }
      />
    </ItemContent>
  </Link>
</Item>
`;

exports[`Post card should render correctly post without image 1`] = `
<Item
  className="post-item"
>
  <Link
    className="post-link"
    replace={false}
    to="/category/some-slug/32/post/mock-slug/1"
  >
    <div>
      <CategoryLabel
        key="43"
        link={null}
        name="Some category"
      />
      <CategoryLabel
        key="54"
        link={null}
        name="Some category"
      />
      <CategoryLabel
        key="23"
        link={null}
        name="Some category"
      />
    </div>
    <ItemHeader
      as="h1"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Mock title",
        }
      }
    />
    <ItemContent>
      <ItemDescription
        dangerouslySetInnerHTML={
          Object {
            "__html": "Some mock exceprt to be rendered",
          }
        }
      />
    </ItemContent>
  </Link>
</Item>
`;
